syntax = "proto3";

package yandex.cloud.priv.loadtesting.v1.comparison;

option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/loadtesting/comparison;comparison";
option java_outer_classname = "LtV1ComparisonTableType";

enum TableType {
    TABLE_TYPE_UNSPECIFIED = 0;
    NETWORK_CODES = 1;
    PROTOCOL_CODES = 2;
    QUANTILES = 3;
    MONITORING = 4;
}
